--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <h1>Pozdrav Ariani i Pufici</h1>
     <p>Ovo je jedan dosadan kamen s mog servera</p>
-    <img src="./boring-rock.png" alt="Boring Rock" />
+    <a href="https://youtu.be/dQw4w9WgXcQ">
+      <img src="./boring-rock.png" alt="Boring Rock" />
+    </a>
   </body>
 </html>
