--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
     <a href="https://youtu.be/dQw4w9WgXcQ">
       <img src="./boring-rock.png" alt="Boring Rock" />
     </a>
+
+    <h3>Fora yammat emisije</h3>
+    <iframe
+      width="100%"
+      height="120"
+      src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FyammatFM_shows%2Fdj-consigliere-04052025%2F"
+      frameborder="0"
+      allow="encrypted-media; fullscreen; autoplay; idle-detection; speaker-selection; web-share;"
+    ></iframe>
   </body>
 </html>
