add reminder of show

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <img src="./boring-rock.png" alt="Boring Rock" />
     </a>
 
-    <h3>Fora yammat emisije</h3>
+    <h3>Fora yammat emisije:</h3>
+    <br />
+    <p>Portugal vibes</p>
     <iframe
       width="100%"
       height="120"
